@@ -45,15 +45,13 @@ public:
 	CcdInfo		getinfo(uint32_t mode, int bits, int ccdindex);
 	uint32_t	readoutmode(const CcdInfo& info) const;
 private:
-	ImageSize	_totalsize;
-	ImageSize	_effectivearea;
-	ImagePoint	_start;
-	ImagePoint	_offset;
+	TopLeftRectangle	_effectivearea;
 public:
-	const ImageSize	totalsize() const { return _totalsize; }
-	const ImageSize effectivearea() const { return _effectivearea; }
-	const ImagePoint	start() const { return _start; }
-	const ImagePoint	offset() const { return _offset; }
+	const ImageSize	totalsize() const { return _effectivearea.within(); }
+	const TopLeftRectangle effectivearea() const { return _effectivearea; }
+	const ImageSize	effectivesize() const { return _effectivearea.size(); }
+	const ImagePoint start() const { return _effectivearea.topleft(); }
+	const ImagePoint origin() const { return _effectivearea.origin(); }
 };
 
 } // namespace qhy2
